<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jbnm.homehero.ui.signup.SignUpActivity">

    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_email_input"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.19999999"/>

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_password_input"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmailEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailEditText"/>

    <EditText
        android:id="@+id/signUpConfirmEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_password_confirm_input"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEditText"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/signUpConfirmEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpConfirmEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmEditText"/>

    <Button
        android:id="@+id/loginLinkButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/link_sign_up_to_login"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>
